# video_manager

./: .gitignore  LICENSE  README.md  __init__.py  __version__.py  audio_to_speech.py  create_deb_package.sh  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  uploader_example.yaml  video_editor.py  video_manager.py  video_spliter.py  video_splitter.py  youtube_downloader.py  youtube_uploader.py
.github/workflows/: ci.yml  tests.yml
Downlod/: chapters.txt
styles/: density_compact.qss  theme_dark.qss  theme_light.qss
tests/: conftest.py  test_video_splitter_helpers.py  test_youtube_uploader_yaml.py
